--- a/index.html
+++ b/index.html
@@ -14,7 +14,116 @@
         </div>
         <div class="content">
 
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+            <div class="card">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+            <div class="card">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+            <div class="card">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="user">
+                    X Pinco Pallo
+                </div>
+            </div>
+
+
+            
         </div>
+        
     </div>
     <div class="menu">
 
