--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 <body>
     <div class="main-content">
         <div class="options">
-
+            <div>
+                <i class="fa-solid fa-table-cells-large"></i>
+                Speaker view
+            </div>
+            <div>
+                <i class="fa-solid fa-maximize"></i>
+            </div>
         </div>
         <div class="content">
 
